--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <main>
  <h2> Tajeka Johnson</h2>
  <p>I am a very pleasant person and I like trying new adeventures. I am interested in Web Development because the first I created a webpage I enjoyed doing so, I know that it's no doubt this course will be great. Also, I think I may have a creative side so this may also be a way to express such.</p>
-	<img src="picture.jpg" alt="Image of somebody enjoying the sunset">
+	<img src="picture.webp" alt="Image of somebody enjoying the sunset">
  </main>
  <footer>
  <p>Copyright &copy; 2020 Tajeka Johnson.</p>
